<resources>
    <string name="app_name">Pill Logger</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="pill_name_hint">Name</string>
    <string name="note_hint">Note</string>
    <string name="note_title_hint">Note Title</string>
    <string name="pill_size_hint">Size</string>
    <string name="units">g</string>
    <string name="add_button">Add</string>
    <string name="title_pill_detail">Pill Detail</string>
    <string name="title_pill_list">Pills</string>
    <string name="add_consumption_title">Choose medicine</string>
    <string name="drawer_consumption">Consumption</string>
    <string name="drawer_pills">Pills</string>
    <string name="drawer_open">Menu</string>
    <string name="drawer_close">Close</string>
    <string name="pill_units">mg</string>
    <string name="placeholder_pill_text">Paracetamol</string>
    <string name="placeholder_pill_size">500</string>
    <string name="drawer_settings">Settings</string>
    <string name="favourite">Favorite</string>
    <string name="unfavourite">Unfavorite</string>
    <string name="delete">Delete</string>
    <string name="create_a_pill_title">Add new Medicine</string>
    <string name="create_a_pill_size_hint">Size</string>
    <string name="drawer_charts">Charts</string>
    <string name="monday_short">Mon</string>
    <string name="tuesday_short">Tue</string>
    <string name="wednesday_short">Wed</string>
    <string name="thursday_short">Thu</string>
    <string name="friday_short">Fri</string>
    <string name="saturday_short">Sat</string>
    <string name="sunday_short">Sun</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="no_consumptions_message">No consumptions recorded</string>
    <string name="last_taken_message_prefix">Last taken</string>
    <string name="add_consumption_quantity_default">0</string>
    <string name="action_settings">Settings</string>
    <string name="action_stats">Statistics</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="add_consumption_existing_pill_label">Select Medicine</string>
    <string name="new_pill_label">New Medicine</string>
    <string name="new_pill_name_hint">Name</string>
    <string name="new_pill_size_hint">Size</string>
    <string name="add_consumption_time_title">Set Time</string>
    <string name="now">Now</string>
    <string name="add_consumption_time_select_date_label">Select Date and Time</string>
    <string name="complete_action_content_description">Complete action</string>
    <string name="pro_lock">Coming soon in our Pro version</string>
    <string name="tick_description">Tick</string>
    <string name="finish_create_pill">Create</string>
    <string name="graph_title">Pill Consumption over the past 7 days</string>
    <string name="no_consumptions_text">Your consumption history will be visible here!</string>
    <string name="pill_fragment_title">Your Medicine Library</string>
    <string name="consumption_fragment_title">Your Consumption History</string>
    <string name="graph_fragment_title">Charts</string>
    <string name="consumptionlist_tut_1">This page will show your medication history</string>
    <string name="consumptionlist_tut_2">Tap here to log when you take medicine</string>
    <string name="consumptionlist_tut_3">Favorite medicine will be shown in this menu</string>
    <string name="pillslist_tut_0">This page shows your saved medication</string>
    <string name="pillslist_tut_1">Use this box to add new medicine</string>
    <string name="pillslist_tut_2">Your medicine will appear here. Tap for more options</string>
    <string name="add_consumption_reminder_title">Set Reminder</string>
    <string name="reminder_hours">Hours</string>
    <string name="add_consumption_reminder_select_specific_label">Select Date and Time</string>
    <string name="intent_reminder">uk.co.pilllogger.REMINDER</string>
    <string name="intent_delay_reminder">uk.co.pilllogger.DELAY_REMINDER</string>
    <string name="intent_take_again">uk.co.pilllogger.TAKE_AGAIN</string>
    <string name="notification_reminder_title">Reminder</string>
    <string name="notification_reminder_content_prefix">You took</string>
    <string name="intent_extra_notification_consumption_group">notification_consumption_group</string>
    <string name="pref_key_reminders">reminders</string>
    <string name="pref_title_reminders">Reminders</string>
    <string name="pref_key_reminder_sound">reminder_sound</string>
    <string name="pref_key_reminder_vibrate">reminder_vibrate</string>
    <string name="pref_title_reminder_vibrate">Vibrate</string>
    <string name="pref_title_reminder_sound">Sound</string>
    <string name="add_consumption_hours_prefix">In </string>
    <string name="add_consumption_hours_suffix"> hours</string>
    <string name="add_consumption_hours_hint">0</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="add_consumption_future_confirmation">Are you sure you want to add this consumption in the future?</string>
    <string name="add_consumption_reminder_warning_past">You must set a date in the future for the reminder</string>
    <string name="add_consumption_reminder_toast_prefix">Reminder set for </string>
    <string name="info_dialog_delete">Delete</string>
    <string name="info_dialog_take_now">Take now</string>
    <string name="info_dialog_set_favourite">Set as favorite</string>
    <string name="info_dialog_unset_favourite">Remove from favorites</string>
    <string name="info_dialog_change_colour">Change color</string>
    <string name="info_dialog_last_taken">Latest: </string>
    <string name="info_dialog_dosage">In the last 24 hours:</string>
    <string name="consumption_info_dialog_increase">Increase quantity</string>
    <string name="consumption_info_dialog_decrease">Decrease quantity</string>
    <string name="consumption_info_dialog_take">Take again</string>
    <string name="consumption_info_dialog_take_again_prefix">Take another</string>
    <string name="consumption_info_dialog_take_again_suffix"> now</string>
    <string name="pill_info_dialog_take_now_prefix">Take a </string>
    <string name="pill_info_dialog_take_now_suffix"> now</string>
    <string name="medicine_taken_most_often_title">Medicine Taken Most Often</string>
    <string name="day_with_most_consumptions_title">Day of Week with Most Consumptions</string>
    <string name="hour_with_most_consumptions_title">Hour of Day with Most Consumptions</string>
    <string name="your_last_consumption_title">Your Last Consumption</string>
    <string name="average_between_consumptions_title">Average Time Between Consumptions</string>
    <string name="longest_between_consumption_title">Longest Time Between Consumptions</string>
    <string name="fewer">Fewer</string>
    <string name="more">More</string>
    <string name="stats_fragment_title">Your Statistics</string>
    <string name="days_text">days</string>
    <string name="current_streak_title">Current \nConsecutive</string>
    <string name="longest_streak_title">Longest \nConsecutive</string>
    <string name="total_taken_title">Total</string>
    <string name="action_feedback">Send Feedback</string>
    <string name="just_now">just now</string>
    <string name="stats_total_explanation">Total quantity of medicine you\'ve consumed since the dawn of time</string>
    <string name="stats_longest_consecutive_explanation">Most consecutive days that you\'ve recorded taking medicine</string>
    <string name="stats_current_consecutive_explanation">Current consecutive days that you\'ve recorded taking medicine</string>
    <string name="seenVersionKey">seenVersion</string>
    <string name="key_show_feedback_button">showfeedback</string>
    <string name="pref_key_recent_changes">recent_changes</string>
    <string name="pref_title_recent_changes">Recent changes</string>
    <string name="support_subject">Pill Logger Feedback</string>
    <string name="feedback_chooser_title">Send feedback…</string>
    <string name="widget_quantity_indicator">●</string>
    <string name="widget_quantity_overload_indicator">+</string>
    <string name="confirm_delete_title">Confirm Delete</string>
    <string name="confirm_delete_message">This will delete all history for this medication</string>
    <string name="info_dialog_edit_pill_title">Edit medicine</string>
    <string name="add_consumption">Add Consumption</string>
    <string name="info_dialog_notes_title">Notes</string>
    <string name="edit_pill_size_label">Size: </string>
    <string name="edit_pill_name_label">Name: </string>
    <string name="edit_pill_dialog_title">Edit Medicine Info</string>
    <string name="color">Color</string>
    <string name="stats_no_information_text">Once you\'ve input information this page will show a collection of useful statistics</string>
    <string name="order_created">Date Created</string>
    <string name="alphabetical">Name</string>
    <string name="last_taken">Last Taken</string>
    <string name="rainbowTheme">Colors</string>
    <string name="professionalTheme">Simple</string>
    <string name="pref_key_theme_list">themeList</string>
    <string name="pref_key_medication_list_order">medicationOrderList</string>
    <string name="pref_key_theme">themes</string>
    <string name="pref_key_display">displays</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_title_display">Display</string>
    <string name="chooseTheme">Theme</string>
    <string name="medicationListOrder">Medicine Sort Order</string>
    <string name="add_widget_title">Select medicine(s) to use for this widget</string>
    <string name="dialog_change_theme">We have introduced a new \"Simple\" theme in this update, would you like to try it? \n\nIf you would like to switch back to the old theme, you can do so from the settings page.</string>
    <string name="dialog_change_theme_yes">Yes, use new theme</string>
    <string name="dialog_change_theme_no">No, use old theme</string>
    <string name="dialog_change_theme_title">New Theme</string>
    <string name="take_again_insert">more</string>
    <string name="take_again_quantity_prefix">Quantity</string>
    <string name="consumption_info_dialog_increase_toast">Quantity increased</string>
    <string name="consumption_info_dialog_decrease_toast">Quantity decreased</string>
    <string name="pref_title_reverse_order">Reverse Medicine Sort Order</string>
    <string name="pref_key_reverse_order">reverse_order_key</string>
    <string name="pref_title_relative_times">Relative Times</string>
    <string name="pref_key_relative_times">relative_dates_key</string>
    <string name="pref_summary_relative_times_prefix">e.g.</string>
    <string name="pref_title_graph_height">Graph Height</string>
    <string name="pref_key_graph_height">graph_height_key</string>
    <string name="info_daily_title_units">Average daily units</string>
    <string name="info_daily_title_dosage">Average daily dosage</string>
    <string name="most_taken">Most Taken</string>
    <string name="taken_most_recently">Taken Most Recently</string>
    <string name="action_export">Export</string>
    <string name="share_export_chooser_title">Choose an action</string>
    <string name="share_export_subject">Pill Logger Consumption Export</string>
    <string name="export_select_medicine">Medicines</string>
    <string name="export_dosage_options">Dosage options</string>
    <string name="new_pill_fragment_title">New Medicine</string>
    <string name="new_note_fragment_title">New Note</string>
    <string name="done_label">Done</string>
</resources>