<PreferenceScreen
    android:key="general_preferenceScreen" xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_title_reminders" android:key="@string/pref_key_reminders">
        <RingtonePreference
            android:title="@string/pref_title_reminder_sound"
            android:key="@string/pref_key_reminder_sound"
            android:showSilent="true"
            android:showDefault="true"
            android:ringtoneType="notification"/>
        <CheckBoxPreference
            android:title="@string/pref_title_reminder_vibrate"
            android:key="@string/pref_key_reminder_vibrate"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_display" android:key="@string/pref_key_display">
        <ListPreference
            android:title="@string/chooseTheme"
            android:dialogTitle="@string/chooseTheme"
            android:entries="@array/themeNames"
            android:entryValues="@array/themes"
            android:defaultValue="@string/rainbowTheme"
            android:key="@string/pref_key_theme_list"
            android:persistent="true"/>
        <ListPreference
            android:title="@string/medicationListOrder"
            android:dialogTitle="@string/medicationListOrder"
            android:entries="@array/medicineSortOrder"
            android:entryValues="@array/medicineSortOrder"
            android:defaultValue="@string/order_created"
            android:key="@string/pref_key_medication_list_order"
            android:persistent="true"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="About" android:key="about">
        <Preference
            android:title="@string/pref_title_recent_changes"
            android:key="@string/pref_key_recent_changes"/>
        <Preference
            android:title="@string/pref_title_licenses"
            android:key="@string/pref_key_licenses"/>
    </PreferenceCategory>

</PreferenceScreen> 