<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:background="?android:attr/selectableItemBackground">


        <TextView android:textSize="20dp"
                  android:id="@+id/pill_list_name"
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:textColor="@color/text_grey_medium"
                  tools:text="@string/placeholder_pill_text"/>

        <TextView
            android:id="@+id/pill_list_units"
            android:textSize="14dp"
            android:layout_alignParentRight="true"
            android:layout_alignBaseline="@id/pill_list_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_grey_medium"
            android:text="@string/pill_units"/>
        <TextView
            android:textSize="18dip"
            android:id="@+id/pill_list_size"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/pill_list_units"
            android:layout_alignBaseline="@id/pill_list_name"
            android:textColor="@color/text_grey_medium"
            tools:text="@string/placeholder_pill_size"/>

</RelativeLayout>