<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:padding="10dp">
    <include layout="@layout/info_dialog_top"/>
    <TextView
        android:id="@+id/info_dialog_add_consumption"
        android:text="@string/info_dialog_take_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/text_grey"
        android:layout_marginTop="6dp"
        android:paddingTop="8dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"/>
    <TextView
        android:id="@+id/info_dialog_change_colour"
        android:text="@string/info_dialog_change_colour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/text_grey"
        android:paddingTop="8dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"/>
    <LinearLayout
        android:id="@+id/info_dialog_colour_picker_container"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:layout_below="@id/pill_fragment_add_pill_name_colour"
        android:layout_centerHorizontal="true">
        <include layout="@layout/colour_picker_small"/>
    </LinearLayout>
    <TextView
        android:id="@+id/info_dialog_set_name_dosage"
        android:text="@string/info_dialog_change_name_dosage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/text_grey"
        android:paddingTop="8dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"/>
    <TextView
        android:id="@+id/info_dialog_set_favourite"
        android:text="@string/info_dialog_set_favourite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/text_grey"
        android:paddingTop="8dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="4dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"/>
    <TextView
        android:id="@+id/info_dialog_delete"
        android:text="@string/info_dialog_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/text_grey"
        android:paddingTop="8dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"/>
</LinearLayout>