<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@android:color/transparent">
    <TextView
        android:id="@+id/new_pill_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_grey_medium"
        android:text="@string/new_pill_fragment_title"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/new_pill_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/text_grey"
            android:textCursorDrawable="@null"
            android:textSize="18sp"
            android:layout_margin="4dp"
            android:inputType="textCapWords"
            android:hint="@string/pill_name_hint"/>
        <ImageView
            android:id="@+id/new_pill_favourite"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="8dp"
            android:src="@drawable/star_empty"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/new_pill_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_grey"
            android:textCursorDrawable="@null"
            android:textSize="18sp"
            android:layout_margin="4dp"
            android:inputType="numberDecimal"
            android:hint="@string/pill_size_hint"/>
        <Spinner
            android:id="@+id/units_spinner"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <include layout="@layout/colour_picker_small"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_divider_lighter" />
    <LinearLayout
        android:id="@+id/export_pills_list_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/new_pill_done"
            android:text="@string/done_label"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/text_grey_medium"/>
    </LinearLayout>
</LinearLayout>