<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back_light"
    >
    <RelativeLayout
        android:id="@+id/colour_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#70FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:id="@+id/stats_most_taken_medicine_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medicine_taken_most_often_title"
                android:textColor="@color/light_blue"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/stats_most_taken_medicine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_grey"
                android:layout_margin="5dp"
                android:textSize="16sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/text_grey_light"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/stats_day_most_consumptions_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day_with_most_consumptions_title"
                android:textColor="@color/light_blue"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/stats_day_most_consumptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_grey"
                android:layout_margin="5dp"
                android:textSize="16sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/text_grey_light"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/stats_hour_most_consumptions_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hour_with_most_consumptions_title"
                android:textColor="@color/light_blue"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/stats_hour_most_consumptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_grey"
                android:layout_margin="5dp"
                android:textSize="16sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/text_grey_light"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/stats_average_between_consumption_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/average_between_consumptions_title"
                android:textColor="@color/light_blue"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/stats_average_between_consumption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_grey"
                android:layout_margin="5dp"
                android:textSize="16sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/text_grey_light"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/stats_longest_between_consumption_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/longest_between_consumption_title"
                android:textColor="@color/light_blue"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/stats_longest_between_consumption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_grey"
                android:layout_margin="5dp"
                android:textSize="16sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/text_grey_light"
                android:layout_marginBottom="10dp"/>

            </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
