<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:background="@android:color/transparent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/edit_pill_name_label"
            android:text="@string/edit_pill_name_label"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_grey"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>
        <EditText
            android:id="@+id/edit_pill_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_grey_medium"
            android:textCursorDrawable="@null"
            android:textSize="18sp"
            android:layout_margin="4dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/edit_pill_size_label"
            android:text="@string/edit_pill_size_label"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_grey"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>
        <EditText
            android:id="@+id/edit_pill_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_grey_medium"
            android:textCursorDrawable="@null"
            android:textSize="18sp"
            android:layout_margin="4dp"
            android:inputType="numberDecimal"/>
        <Spinner
            android:id="@+id/units_spinner"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/export_pills_list_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/export_pills_done"
            android:text="@string/done_label"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/text_grey_medium"
            android:drawableLeft="@drawable/navigation_back"/>
    </LinearLayout>
</LinearLayout>